# defense-in-depth-demo

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  demo.py  pyproject.toml
prompt_templates/: few_shot_input_filter.yaml  few_shot_output_filter.yaml  zero_shot_input_filter.yaml  zero_shot_output_filter.yaml
robust_llm/: api_utils.py  dist_utils.py  file_utils.py  message_utils.py  mocks.py  stat_utils.py  utils.py
robust_llm/config/: __init__.py  configs.py  constants.py  dataset_configs.py  layered_defense_configs.py  model_configs.py
robust_llm/layered_defense/: __init__.py  components.py  factory.py  layered_defense.py  llamaguard3_input_filter.py  llamaguard3_output_filter.py  llamaguard4_input_filter.py  llamaguard4_output_filter.py  promptguard_input_filter.py  trained_input_filter.py  trained_output_filter.py  trained_transcript_filter.py
robust_llm/layered_defense/prompted_filters/: __init__.py  prompted_filter_templates.py  prompted_filters.py
robust_llm/layered_defense/shieldgemma_filters/: __init__.py  shieldgemma_input_filter.py  shieldgemma_output_filter.py
robust_llm/layered_defense/wildguard_filters/: __init__.py  wildguard_input_filter.py  wildguard_output_filter.py  wildguard_utils.py
robust_llm/models/: __init__.py  caching_wrapped_model.py  metric_utils.py  mock_models.py  model_output_metrics.py  model_outputs.py  model_utils.py  prompt_templates.py  toxic_bert.py  vllm_adapter.py  wrapped_chat_model.py  wrapped_model.py
robust_llm/models/supported_models/: gemma_chat_wrapped.py  gemma_wrapped.py  gpt2_wrapped.py  gpt_neox_chat_wrapped.py  gpt_neox_wrapped.py  llama2_chat_wrapped.py  llama2_wrapped.py  llama3_chat_wrapped.py  llama3_wrapped.py  qwen_chat_wrapped.py  qwen_wrapped.py  tinyllama_chat_wrapped.py
robust_llm/profiling/: run_with_profiling.py
robust_llm/rllm_datasets/: __init__.py  dataset_utils.py  load_rllm_dataset.py  rllm_dataset.py
robust_llm/rllm_datasets/generation_scripts/: dataset_upload_handler.py  download_datasets_to_disk.py  upload_clear_harm.py  upload_donotanswer.py  upload_enron_spam.py  upload_filtered_renellm.py  upload_harmbench.py  upload_imdb.py  upload_jailbreak_completions.py  upload_jailbreak_inputs.py  upload_sorrybench.py  upload_strongreject.py  upload_wildchat.py  upload_wildchat_filtered.py  upload_wildguardtest.py  upload_xstest.py
robust_llm/rllm_datasets/generation_scripts/onetime_scripts/: bon_clearharm.sh  bon_clearharm100x200.sh  renellm_clearharm.sh
robust_llm/rllm_datasets/supported_datasets/: clear_harm_dataset.py  contact_info_dataset.py  enron_spam_dataset.py  harmbench_dataset.py  helpful_harmless.py  imdb_dataset.py  llama3_jailbreaks_dataset.py  password_match_dataset.py  pure_generation_dataset.py  strongreject_dataset.py  wildchat_dataset.py  wildguardtest_dataset.py  word_length_dataset.py  xstest_dataset.py
robust_llm/wandb_utils/: constants.py  wandb_api_tools.py
tests/: test_chat_templates.py  test_dataset_utils.py  test_dist_utils.py  test_flop_counting.py  test_initial_prompts.py  test_kv_caching.py  test_message_filters.py  test_model_utils.py  test_new_chat_templates.py  test_output_metrics.py  test_password_match.py  test_prompt_templates.py  test_rllm_dataset.py  test_stats.py  test_target_slice.py  test_uploaded_datasets.py  test_utils.py  test_wrapped_model.py
(+1 files in other folders)
